--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/main.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/main.tex
@@ -126,13 +126,20 @@ It is often thought that political affiliation and personal wealth of politician
     Finally, the provincial executives seem to be more like the upper house members than like ministers or lower house members in terms of wealth. On average, they are richer than lower house members, with their average wealth equaling about 160,000 deflated guilders, although there are both very poor and very wealthy outliers. Generally, it is not possible to find out the political affiliation of provincial executives. 
     
     
-\subsection{The Richest Politicians}
+\subsection{The Wealthiest Politicians}
     
     \begin{center}
-    [NOTE DONE YET: grafiek inter-politician inequality per funct and affil]
+    Here table \ref{tab:richestpols}
     \end{center}
 
-    Next, in figure [YET TO MAKE], we provide a short overview akin to the Forbes 500 of which politicians died with the largest estate value, in other words, which politicians are most likely to have been among the richest politicians from 1871 to 1922. 
+    Next, in table \ref{tab:richestpols}, we provide a short overview, akin to the \textit{Forbes 500}, of which politicians died with the largest estate value. In other words, which politicians are most likely to have been among the richest politicians from 1871 to 1922? We show an overview of the ten wealthiest politicians in the lower house, upper house, among ministers and among provincial executives respectively. 
+    
+    In the lower house, the richest politician was George Hermann Hintzen, with a deflated net estate value of almost 4 million guilders. Aside from being a politician, Hintzen was a banker and a trader, but he was no aristocrat: he originates from the well-off bourgeoisie, and his father was a businessman. The second richest lower house member, C.J.E. van Bylandt, with a net estate value almost equaling that of Hintzen with 3.8 million guilders, was a conservative-liberal, and an aristocrat: he was member of the High Council of Nobility for several years. Several other politicians who figured in the top ten wealthiest politicians also were aristocrats, and several of them have been active for many years in politics: among others, Willem van Heeckeren van Kell and Henri François Rudolf Hubrecht.
+    
+    In the upper house, by far the richest politician was Gerrit Jan van Heek, an industrialist and (at times) banker, who owned the largest industrial Dutch company at the time, \textit{Van Heek \& Co.}. Like the lower house, the wealthiest senators are also mostly aristocrats. One of the few non-aristocrats is the politician taking second palce, Dirk Laan, also an industrial from the \textit{Zaanstreek} area. The same pattern seems to dominate among Ministers and Provincial Executives. As a whole, the ten wealthiest ministers seem to have been less wealthy than politicians in other political functions. The tenth richest minister, Johan George Gleichman, was a lawyer and civil servant before entering politics, and died with an estate value of approx. 680,000 guilders, whereas the tenth richest upper house member, F.X.J. van Nispen tot Pannerden, died with an estate value of almost two million guilders. 
+    
+    In sum, the richest politicians belonged almost certainly to the upper tail of the wealth distribution, but even among rich politicians, there seems to have been ample variation. 
+    
 
 \subsection{What do their investment portfolios look like?}
 
@@ -272,6 +279,10 @@ Coming back to the subject of wealth, it seems that it is possible to retrieve p
     \caption{Average Wealth per Parliament per Party}
     \label{fig:avgwealthtimeparty}
 \end{figure}
+\clearpage
+
+
+\input{tables/richestpols}
 \clearpage
 
 
