updated tables and figures

--- a/Tables/table_wealth_kabinet.tex
+++ b/Tables/table_wealth_kabinet.tex
@@ -1,27 +1,27 @@
-% latex table generated in R 3.6.3 by xtable 1.8-4 package
-% Wed Aug 19 10:37:22 2020
+% latex table generated in R 3.6.0 by xtable 1.8-4 package
+% Mon Aug 31 15:42:05 2020
 \begin{table}[ht]
 \centering
-\begin{tabular}{lrrrrr}
+\begin{tabular}{lrrrl}
   \hline
-Government & Mean & Median & SD & N & WealthPM \\ 
+Government & Mean & Median & N & WealthPM \\ 
   \hline
-Thorbecke III & 178154 & 95554 & 201112 & 7 &  \\ 
-  De Vries/Fransen van de Putte & 81432 & 60689 & 76062 & 7 &  \\ 
-  Heemskerk/Van Lynden van Sandenburg & 291140 & 220192 & 280563 & 9 & 623456 \\ 
-  Kappeyne van de Coppello & 723896 & 446626 & 942720 & 10 & 485686 \\ 
-  Van Lynden van Sandenburg & 220697 & 160340 & 237914 & 10 & 748926 \\ 
-  Heemskerk Azn. & 152602 & 57739 & 190782 & 13 & 623456 \\ 
-  Mackay & 92411 & 81022 & 88781 & 8 & 246825 \\ 
-  Van Tienhoven & 406770 & 233273 & 568110 & 6 & 365691 \\ 
-  Röell & 158083 & 55433 & 207810 & 7 & 559626 \\ 
-  Pierson & 98497 & 100291 & 55039 & 7 &  \\ 
-  Kuyper & 317188 & 53429 & 770428 & 7 & 112404 \\ 
-  De Meester & 156490 & 63356 & 244954 & 9 & 36111 \\ 
-  Heemskerk & 62610 & 21440 & 108579 & 10 &  \\ 
-  Cort van der Linden & 109307 & 97571 & 66149 & 8 & 100291 \\ 
-  Ruijs de Beerenbrouck I & 80876 & 24459 & 145993 & 7 &  \\ 
+Thorbecke III & 178.2 & 95.6 &  7 & NA \\ 
+  De Vries/Fransen van de Putte & 81.4 & 60.7 &  7 & NA \\ 
+  Heemskerk/Van Lynden van Sandenburg & 291.1 & 220.2 &  9 & 623.5 \\ 
+  Kappeyne van de Coppello & 723.9 & 446.6 & 10 & 485.7 \\ 
+  Van Lynden van Sandenburg & 220.7 & 160.3 & 10 & 748.9 \\ 
+  Heemskerk Azn. & 152.6 & 57.7 & 13 & 623.5 \\ 
+  Mackay & 92.4 & 81.0 &  8 & 246.8 \\ 
+  Van Tienhoven & 406.8 & 233.3 &  6 & 365.7 \\ 
+  Röell & 158.1 & 55.4 &  7 & 559.6 \\ 
+  Pierson & 98.5 & 100.3 &  7 & NA \\ 
+  Kuyper & 317.2 & 53.4 &  7 & 112.4 \\ 
+  De Meester & 156.5 & 63.4 &  9 & 36.1 \\ 
+  Heemskerk & 62.6 & 21.4 & 10 & NA \\ 
+  Cort van der Linden & 109.3 & 97.6 &  8 & 100.3 \\ 
+  Ruijs de Beerenbrouck I & 80.9 & 24.5 &  7 & NA \\ 
    \hline
 \end{tabular}
-\caption{Average Wealth of Governments} 
+\caption{Average Wealth of Governments (1000 guilders)} 
 \end{table}
