--- a/Tables/richestpols.tex
+++ b/Tables/richestpols.tex
@@ -1,16 +1,20 @@
 % latex table generated in R 3.6.0 by xtable 1.8-4 package
-% Mon Aug 31 13:08:54 2020
+% Mon Aug 31 14:10:07 2020
 \begin{table}[ht]
 \centering
 \begin{tabular}{llllr}
-   \hline
+
+\multicolumn{5}{l}{Panel A: Lower House}\\
+\hline
 Name & Begin & End & Death & Wealth \\\hline
+
 George Hermann Hintzen & 1888 & 1897 & 1932 & 3,938.4 \\
   Carel Jan Emilius van Bylandt & 1894 & 1901 & 1902 & 3,840.4 \\
   Willem van Heeckeren van Kell & 1882 & 1884 & 1914 & 3,103.7 \\
   Willem Jan Roijaards van den Ham & 1888 & 1897 & 1897 & 2,918.3 \\
   Henri François Rudolf Hubrecht & 1901 & 1918 & 1926 & 2,221.3 \\
-
+   \hline\\
+\multicolumn{5}{l}{Panel B: Upper House}\\
 \hline
 Name & Begin & End & Death & Wealth \\\hline
 Gerrit Jan van Heek & 1895 & 1903 & 1915 & 7,303.5 \\
@@ -18,7 +22,8 @@ Gerrit Jan van Heek & 1895 & 1903 & 1915 & 7,303.5 \\
   Cornelis Jacob Arnold den Tex & 1875 & 1882 & 1882 & 3,067.1 \\
   Jan Evert Scholten & 1902 & 1910 & 1918 & 2,364.5 \\
   Jan van der Lande & 1913 & 1932 & 1943 & 2,275.6 \\
-
+   \hline\\
+\multicolumn{5}{l}{Panel C: Ministers}\\
 \hline
 Name & Begin & End & Death & Wealth \\\hline
 Willem Heeckeren van Kell & 1877 & 1879 & 1914 & 3,103.7 \\
@@ -26,7 +31,8 @@ Willem Heeckeren van Kell & 1877 & 1879 & 1914 & 3,103.7 \\
   Johannes Pieter Roetert Tak van Poortvliet & 1877 & 1894 & 1904 & 1,529.8 \\
   James Loudon & 1861 & 1862 & 1900 & 861.5 \\
   Daniël Théodore Gevers van Endegeest & 1856 & 1858 & 1877 & 833.8 \\
-
+   \hline\\
+\multicolumn{5}{l}{Panel D: Provincial Executives}\\
 \hline
 Name & Begin & End & Death & Wealth \\\hline
 H. Royaards & 1873 & 1896 & 1898 & 5,310.2 \\
