--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/portcomp_2.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/portcomp_2.tex
@@ -1,26 +1,26 @@
-% latex table generated in R 3.6.3 by xtable 1.8-4 package
-% Wed Aug 19 19:05:15 2020
+% latex table generated in R 3.6.0 by xtable 1.8-4 package
+% Mon Aug 31 15:38:34 2020
 \begin{table}[ht]
 \centering
 \begingroup\small
-\begin{tabular}{llrrrrr}
+\begin{tabular}{llllllr}
   \hline
-House & class & mean\_re & mean\_shares & mean\_bonds & mean\_misc & n \\ 
+House & Party & RealEstate & Stocks & Bonds & Misc & N \\ 
   \hline
-Lower House & confessional & 0.32 & 0.19 & 0.35 & 0.14 & 160 \\ 
-  Lower House & liberal & 0.23 & 0.24 & 0.43 & 0.10 & 134 \\ 
-  Lower House & neutral & 0.66 & 0.09 & 0.25 & 0.01 &   2 \\ 
-  Lower House & socialist & 0.22 & 0.21 & 0.41 & 0.16 &  22 \\ 
-  Upper House & confessional & 0.35 & 0.19 & 0.34 & 0.11 &  72 \\ 
-  Upper House & liberal & 0.37 & 0.25 & 0.33 & 0.05 &  79 \\ 
-  Upper House & socialist & 0.52 & 0.10 & 0.29 & 0.09 &   3 \\ 
-  Ministers & confessional & 0.24 & 0.20 & 0.42 & 0.14 &  61 \\ 
-  Ministers & liberal & 0.14 & 0.26 & 0.48 & 0.13 &  63 \\ 
-  Ministers & neutral & 0.10 & 0.24 & 0.53 & 0.13 &   6 \\ 
-  Ministers & socialist & 0.21 & 0.36 & 0.38 & 0.06 &   4 \\ 
+Lower House & confessional & 31.6\% & 19.5\% & 35.1\% & 13.8\% & 160 \\ 
+  Lower House & liberal & 23.3\% & 23.8\% & 42.8\% & 10.1\% & 134 \\ 
+  Lower House & neutral & 65.6\% & 8.9\% & 24.5\% & 1.0\% &   2 \\ 
+  Lower House & socialist & 22.0\% & 21.3\% & 40.8\% & 15.9\% &  22 \\ 
+  Upper House & confessional & 35.4\% & 18.9\% & 34.4\% & 11.3\% &  72 \\ 
+  Upper House & liberal & 36.7\% & 25.0\% & 33.1\% & 5.2\% &  79 \\ 
+  Upper House & socialist & 51.8\% & 9.7\% & 29.2\% & 9.3\% &   3 \\ 
+  Ministers & confessional & 23.8\% & 20.0\% & 42.2\% & 14.0\% &  61 \\ 
+  Ministers & liberal & 14.0\% & 25.9\% & 47.5\% & 12.6\% &  63 \\ 
+  Ministers & neutral & 10.4\% & 23.6\% & 53.3\% & 12.6\% &   6 \\ 
+  Ministers & socialist & 20.7\% & 35.6\% & 38.0\% & 5.7\% &   4 \\ 
    \hline
 \end{tabular}
 \endgroup
-\caption{Portfolio Composition according to Political Color} 
+\caption{Portfolio Share according to Political Color and Organ} 
 \label{fig:portcomp2}
 \end{table}
