--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/richestpols.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/richestpols.tex
@@ -1,70 +1,48 @@
-% latex table generated in R 3.6.3 by xtable 1.8-4 package
-% Thu Aug 20 18:34:07 2020
+% latex table generated in R 3.6.0 by xtable 1.8-4 package
+% Mon Aug 31 14:10:07 2020
 \begin{table}[ht]
 \centering
-\begingroup\footnotesize
-\begin{tabular}{lr}
-   
-\multicolumn{2}{l}{Panel A: Lower House}\\ 
-\hline
-Name & Wealth \\\hline
+\begin{tabular}{llllr}
 
-George Hermann Hintzen & 3938359.68 \\ 
-  Carel Jan Emilius van Bylandt & 3840426.83 \\ 
-  Willem van Heeckeren van Kell & 3103734.64 \\ 
-  Willem Jan Roijaards van den Ham & 2918301.24 \\ 
-  Henri François Rudolf Hubrecht & 2221309.15 \\ 
-  Hendrik Lodewijk Drucker & 2193823.88 \\ 
-  Menso Johannes Pijnappel & 1966100.41 \\ 
-  Hendrik Adriaan van Beuningen & 1909502.95 \\ 
-  Alex van Lynden van Sandenburg & 1892869.14 \\ 
-  Isaäc Lambertus Cremer van den Berch van Heemstede & 1834564.95 \\ 
-   \hline\\ 
-\multicolumn{2}{l}{Panel B: Upper House}\\ 
+\multicolumn{5}{l}{Panel A: Lower House}\\
 \hline
-Name & Wealth \\\hline
-Gerrit Jan van Heek & 7303523.59 \\ 
-  Dirk Laan & 4749483.97 \\ 
-  Cornelis Jacob Arnold den Tex & 3067107.32 \\ 
-  Jan Evert Scholten & 2364537.59 \\ 
-  Jan van der Lande & 2275581.91 \\ 
-  Hendrik Lodewijk Drucker & 2193823.88 \\ 
-  Robert Melvil van Lynden & 2057116.99 \\ 
-  Jan Adriaan Laan & 2042916.49 \\ 
-  Menso Johannes Pijnappel & 1966100.41 \\ 
-  Franciscus Xaverius Jacobus Nispen tot Pannerden & 1890894.67 \\ 
-   \hline\\ 
-\multicolumn{2}{l}{Panel C: Ministers}\\ 
+Name & Begin & End & Death & Wealth \\\hline
+
+George Hermann Hintzen & 1888 & 1897 & 1932 & 3,938.4 \\
+  Carel Jan Emilius van Bylandt & 1894 & 1901 & 1902 & 3,840.4 \\
+  Willem van Heeckeren van Kell & 1882 & 1884 & 1914 & 3,103.7 \\
+  Willem Jan Roijaards van den Ham & 1888 & 1897 & 1897 & 2,918.3 \\
+  Henri François Rudolf Hubrecht & 1901 & 1918 & 1926 & 2,221.3 \\
+   \hline\\
+\multicolumn{5}{l}{Panel B: Upper House}\\
 \hline
-Name & Wealth \\\hline
-Willem Heeckeren van Kell & 3103734.64 \\ 
-  Robert Melvil baron van Lynden & 2057116.99 \\ 
-  Johannes Pieter Roetert Tak van Poortvliet & 1529847.04 \\ 
-  James Loudon & 861454.73 \\ 
-  Daniël Théodore Gevers van Endegeest & 833807.11 \\ 
-  Willem Wintgens & 772969.90 \\ 
-  Dirk Arnold Willem Tets van Goudriaan & 767659.25 \\ 
-  Constantijn Theodoor Lynden van Sandenburg & 748925.52 \\ 
-  Gerlach Cornelis Joannes Reenen & 691295.40 \\ 
-  Johan George Gleichman & 676710.49 \\ 
-   \hline\\ 
-\multicolumn{2}{l}{Panel D: Provincial Executives}\\ 
+Name & Begin & End & Death & Wealth \\\hline
+Gerrit Jan van Heek & 1895 & 1903 & 1915 & 7,303.5 \\
+  Dirk Laan & 1897 & 1905 & 1905 & 4,749.5 \\
+  Cornelis Jacob Arnold den Tex & 1875 & 1882 & 1882 & 3,067.1 \\
+  Jan Evert Scholten & 1902 & 1910 & 1918 & 2,364.5 \\
+  Jan van der Lande & 1913 & 1932 & 1943 & 2,275.6 \\
+   \hline\\
+\multicolumn{5}{l}{Panel C: Ministers}\\
 \hline
-Name & Wealth \\\hline
-H. Royaards & 5310152.09 \\ 
-  D. Weel & 4440303.06 \\ 
-  H.A. Steengracht van Duivenvoorde & 4035831.21 \\ 
-  W. Heeckeren van Kell & 3103734.64 \\ 
-  H.F.R. Hubrecht & 2221309.15 \\ 
-  I.L. Cremer van den Berch van Heemstede & 1834564.95 \\ 
-  W. Boreel van Hogelanden & 1810111.54 \\ 
-  W.R. Tuyll van Serooskerken & 1624097.87 \\ 
-  P.L.F. Blussé & 1565265.86 \\ 
-  L.E.M. Fisenne & 1523280.01 \\ 
+Name & Begin & End & Death & Wealth \\\hline
+Willem Heeckeren van Kell & 1877 & 1879 & 1914 & 3,103.7 \\
+  Robert Melvil baron van Lynden & 1901 & 1905 & 1910 & 2,057.1 \\
+  Johannes Pieter Roetert Tak van Poortvliet & 1877 & 1894 & 1904 & 1,529.8 \\
+  James Loudon & 1861 & 1862 & 1900 & 861.5 \\
+  Daniël Théodore Gevers van Endegeest & 1856 & 1858 & 1877 & 833.8 \\
+   \hline\\
+\multicolumn{5}{l}{Panel D: Provincial Executives}\\
+\hline
+Name & Begin & End & Death & Wealth \\\hline
+H. Royaards & 1873 & 1896 & 1898 & 5,310.2 \\
+  D. Weel & 1888 & 1901 & 1911 & 4,440.3 \\
+  H.A. Steengracht van Duivenvoorde & 1873 & 1880 & 1912 & 4,035.8 \\
+  W. Heeckeren van Kell & 1877 & 1884 & 1914 & 3,103.7 \\
+  H.F.R. Hubrecht & 1901 & 1918 & 1926 & 2,221.3 \\
    \hline
-\multicolumn{2}{l}{}\\
+\multicolumn{5}{l}{}\\
 \end{tabular}
-\endgroup
-\caption{10 Richest Politicians in each Function} 
+\caption{5 Richest Politicians in each Function (1000 guilders)}
 \label{tab:richestpols}
 \end{table}
