--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/step7_table_wealth.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/step7_table_wealth.tex
@@ -1,39 +1,40 @@
-% Tue Aug 18 23:46:45 2020
+% latex table generated in R 3.6.0 by xtable 1.8-4 package
+% Mon Aug 31 11:47:49 2020
 \begin{table}[ht]
 \centering
 \begin{tabular}{lrrrrrr}
    
-\multicolumn{7}{l}{Panel 1: Lower House}\\ 
+\multicolumn{7}{l}{Panel A: Lower House}\\ 
 \hline
 Political Affiliation & Mean & Median & StdDev & p25 & p75 & n \\\hline
 
-confessional & 227881.64 & 92058.56 & 388575.79 & 13192.26 & 230841.65 & 630 \\ 
-  liberal & 326935.04 & 136719.69 & 568556.89 & 44275.42 & 325285.53 & 512 \\ 
-  neutral & 325062.97 & 325062.97 & 442998.80 & 168439.24 & 481686.70 &   2 \\ 
-  socialist & 262523.85 & 13107.47 & 597099.18 & 2852.65 & 134249.38 &  70 \\ 
+confessional & 227.9 & 92.1 & 388.6 & 13.2 & 230.8 & 630 \\ 
+  liberal & 326.9 & 136.7 & 568.6 & 44.3 & 325.3 & 512 \\ 
+  neutral & 325.1 & 325.1 & 443.0 & 168.4 & 481.7 & 2 \\ 
+  socialist & 262.5 & 13.1 & 597.1 & 2.9 & 134.2 & 70 \\ 
    \hline\\ 
-\multicolumn{7}{l}{Panel 2: Upper House}\\ 
+\multicolumn{7}{l}{Panel B: Upper House}\\ 
 \hline
 Political Affiliation & Mean & Median & StdDev & p25 & p75 & n \\\hline
-confessional & 465985.87 & 196785.07 & 565430.64 & 80393.64 & 679677.09 & 331 \\ 
-  liberal & 670286.72 & 371136.89 & 1003196.16 & 119687.69 & 825378.47 & 374 \\ 
-  socialist & 513137.08 & 1150.56 & 916832.05 & 1150.56 & 296046.26 &  14 \\ 
+confessional & 466.0 & 196.8 & 565.4 & 80.4 & 679.7 & 331 \\ 
+  liberal & 670.3 & 371.1 & 1003.2 & 119.7 & 825.4 & 374 \\ 
+  socialist & 513.1 & 1.2 & 916.8 & 1.2 & 296.0 & 14 \\ 
    \hline\\ 
-\multicolumn{7}{l}{Panel 3: Ministers}\\ 
+\multicolumn{7}{l}{Panel C: Ministers}\\ 
 \hline
 Political Affiliation & Mean & Median & StdDev & p25 & p75 & n \\\hline
-confessional & 195799.39 & 71684.08 & 329123.10 & 21193.92 & 219146.07 &  62 \\ 
-  liberal & 254826.18 & 105576.60 & 451972.02 & 45771.96 & 298577.52 &  63 \\ 
-  neutral & 26744.12 & 24459.00 & 23695.72 & 8838.28 & 42524.50 &   7 \\ 
-  socialist & 106573.68 & 58300.53 & 103740.62 & 51885.92 & 112988.29 &   4 \\ 
+confessional & 195.8 & 71.7 & 329.1 & 21.2 & 219.1 & 62 \\ 
+  liberal & 254.8 & 105.6 & 452.0 & 45.8 & 298.6 & 63 \\ 
+  neutral & 26.7 & 24.5 & 23.7 & 8.8 & 42.5 & 7 \\ 
+  socialist & 106.6 & 58.3 & 103.7 & 51.9 & 113.0 & 4 \\ 
    \hline\\ 
-\multicolumn{7}{l}{Panel 4: Regional Executives}\\ 
+\multicolumn{7}{l}{Panel D: Regional Executives}\\ 
 \hline
 Political Affiliation & Mean & Median & StdDev & p25 & p75 & n \\\hline
-- & 348764.60 & 154382.14 & 688347.12 & 54082.68 & 331875.01 & 157 \\ 
+- & 348.8 & 154.4 & 688.3 & 54.1 & 331.9 & 157 \\ 
    \hline
 \multicolumn{7}{l}{}\\
 \end{tabular}
-\caption{Wealth according to political affiliation} 
+\caption{Wealth according to political affiliation ($\cdot 10^{3}$ guilders)} 
 \label{tab:wealthfunction}
 \end{table}
