--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/table_wealth_kabinet.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/table_wealth_kabinet.tex
@@ -1,28 +1,27 @@
-% latex table generated in R 3.6.3 by xtable 1.8-4 package
-% Wed Aug 19 10:28:54 2020
+% latex table generated in R 3.6.0 by xtable 1.8-4 package
+% Mon Aug 31 15:42:05 2020
 \begin{table}[ht]
 \centering
-\begin{tabular}{lrrrrr}
+\begin{tabular}{lrrrl}
   \hline
-Government & Mean & Median & SD & N & WealthPM \\ 
+Government & Mean & Median & N & WealthPM \\ 
   \hline
-Thorbecke III & 178154.45 & 95553.65 & 201112.38 &   7 &  \\ 
-  De Vries/Fransen van de Putte & 81432.45 & 60688.56 & 76061.67 &   7 &  \\ 
-  Heemskerk/Van Lynden van Sandenburg & 291139.78 & 220191.94 & 280562.85 &   9 & 623456.01 \\ 
-  Kappeyne van de Coppello & 723895.59 & 446626.37 & 942719.85 &  10 & 485686.30 \\ 
-  Van Lynden van Sandenburg & 220696.73 & 160340.06 & 237914.15 &  10 & 748925.52 \\ 
-  Heemskerk Azn. & 152602.35 & 57739.43 & 190781.56 &  13 & 623456.01 \\ 
-  Mackay & 92410.55 & 81022.22 & 88780.70 &   8 & 246824.84 \\ 
-  Van Tienhoven & 406770.33 & 233272.64 & 568109.83 &   6 & 365691.41 \\ 
-  Röell & 158082.92 & 55432.96 & 207810.33 &   7 & 559626.00 \\ 
-  Pierson & 98497.15 & 100291.03 & 55038.62 &   7 &  \\ 
-  Kuyper & 317187.71 & 53429.02 & 770427.54 &   7 & 112403.97 \\ 
-  De Meester & 156489.94 & 63356.28 & 244954.07 &   9 & 36110.96 \\ 
-  Heemskerk & 62609.76 & 21440.31 & 108578.92 &  10 &  \\ 
-  Cort van der Linden & 109306.59 & 97570.92 & 66149.07 &   8 & 100291.03 \\ 
-  Ruijs de Beerenbrouck I & 80876.23 & 24459.00 & 145993.06 &   7 &  \\ 
+Thorbecke III & 178.2 & 95.6 &  7 & NA \\ 
+  De Vries/Fransen van de Putte & 81.4 & 60.7 &  7 & NA \\ 
+  Heemskerk/Van Lynden van Sandenburg & 291.1 & 220.2 &  9 & 623.5 \\ 
+  Kappeyne van de Coppello & 723.9 & 446.6 & 10 & 485.7 \\ 
+  Van Lynden van Sandenburg & 220.7 & 160.3 & 10 & 748.9 \\ 
+  Heemskerk Azn. & 152.6 & 57.7 & 13 & 623.5 \\ 
+  Mackay & 92.4 & 81.0 &  8 & 246.8 \\ 
+  Van Tienhoven & 406.8 & 233.3 &  6 & 365.7 \\ 
+  Röell & 158.1 & 55.4 &  7 & 559.6 \\ 
+  Pierson & 98.5 & 100.3 &  7 & NA \\ 
+  Kuyper & 317.2 & 53.4 &  7 & 112.4 \\ 
+  De Meester & 156.5 & 63.4 &  9 & 36.1 \\ 
+  Heemskerk & 62.6 & 21.4 & 10 & NA \\ 
+  Cort van der Linden & 109.3 & 97.6 &  8 & 100.3 \\ 
+  Ruijs de Beerenbrouck I & 80.9 & 24.5 &  7 & NA \\ 
    \hline
 \end{tabular}
-\caption{Average Wealth of Governments} 
-\label{tab:avgwealthtimegovt}
+\caption{Average Wealth of Governments (1000 guilders)} 
 \end{table}
