--- a/Tables/table_wealth_kabinet.tex
+++ b/Tables/table_wealth_kabinet.tex
@@ -1,26 +1,26 @@
-% latex table generated in R 3.6.0 by xtable 1.8-4 package
-% Mon Aug 31 15:42:05 2020
+% latex table generated in R 3.6.3 by xtable 1.8-4 package
+% Mon Sep 21 10:56:11 2020
 \begin{table}[ht]
 \centering
-\begin{tabular}{lrrrl}
+\begin{tabular}{llrrrl}
   \hline
-Government & Mean & Median & N & WealthPM \\ 
+Government & period & Mean & Median & N & WealthPM \\ 
   \hline
-Thorbecke III & 178.2 & 95.6 &  7 & NA \\ 
-  De Vries/Fransen van de Putte & 81.4 & 60.7 &  7 & NA \\ 
-  Heemskerk/Van Lynden van Sandenburg & 291.1 & 220.2 &  9 & 623.5 \\ 
-  Kappeyne van de Coppello & 723.9 & 446.6 & 10 & 485.7 \\ 
-  Van Lynden van Sandenburg & 220.7 & 160.3 & 10 & 748.9 \\ 
-  Heemskerk Azn. & 152.6 & 57.7 & 13 & 623.5 \\ 
-  Mackay & 92.4 & 81.0 &  8 & 246.8 \\ 
-  Van Tienhoven & 406.8 & 233.3 &  6 & 365.7 \\ 
-  Röell & 158.1 & 55.4 &  7 & 559.6 \\ 
-  Pierson & 98.5 & 100.3 &  7 & NA \\ 
-  Kuyper & 317.2 & 53.4 &  7 & 112.4 \\ 
-  De Meester & 156.5 & 63.4 &  9 & 36.1 \\ 
-  Heemskerk & 62.6 & 21.4 & 10 & NA \\ 
-  Cort van der Linden & 109.3 & 97.6 &  8 & 100.3 \\ 
-  Ruijs de Beerenbrouck I & 80.9 & 24.5 &  7 & NA \\ 
+Thorbecke III & 1870-1872 & 178.2 & 95.6 &  7 & NA \\ 
+  De Vries/Fransen van de Putte & 1872-1874 & 81.4 & 60.7 &  7 & NA \\ 
+  Heemskerk/Van Lynden van Sandenburg & 1874-1877 & 291.1 & 220.2 &  9 & 623.5 \\ 
+  Kappeyne van de Coppello & 1877-1879 & 723.9 & 446.6 & 10 & 485.7 \\ 
+  Van Lynden van Sandenburg & 1879-1883 & 220.7 & 160.3 & 10 & 748.9 \\ 
+  Heemskerk Azn. & 1883-1888 & 152.6 & 57.7 & 13 & 623.5 \\ 
+  Mackay & 1888-1891 & 92.4 & 81.0 &  8 & 246.8 \\ 
+  Van Tienhoven & 1891-1894 & 406.8 & 233.3 &  6 & 365.7 \\ 
+  Röell & 1894-1897 & 158.1 & 55.4 &  7 & 559.6 \\ 
+  Pierson & 1897-1901 & 98.5 & 100.3 &  7 & NA \\ 
+  Kuyper & 1901-1905 & 317.2 & 53.4 &  7 & 112.4 \\ 
+  De Meester & 1905-1908 & 156.5 & 63.4 &  9 & 36.1 \\ 
+  Heemskerk & 1908-1913 & 62.6 & 21.4 & 10 & NA \\ 
+  Cort van der Linden & 1913-1918 & 109.3 & 97.6 &  8 & 100.3 \\ 
+  Ruijs de Beerenbrouck I & 1918-1922 & 80.9 & 24.5 &  7 & NA \\ 
    \hline
 \end{tabular}
 \caption{Average Wealth of Governments (1000 guilders)} 
