--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/references.bib
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/references.bib
@@ -379,3 +379,153 @@
   author={De Vicq, Amaury and van der Valk, T. and Moatsos, M.},
   journal={Working Paper}
 }
+
+@book{lijphart1975politics,
+  title={The politics of accommodation: Pluralism and democracy in the Netherlands},
+  author={Lijphart, Arend and others},
+  volume={142},
+  year={1975},
+  publisher={Univ of California Press}
+}
+
+@book{van2004strictures,
+  title={The strictures of inheritance: The Dutch economy in the nineteenth century},
+  author={Van Zanden, Jan Luiten and Van Riel, Arthur},
+  volume={14},
+  year={2004},
+  publisher={Princeton university press}
+}
+
+@book{rooy2014ons,
+  title={Ons stipje op de waereldkaart: de politieke cultuur van Nederland in de negentiende en twintigste eeuw},
+  author={de Rooy, Pieter},
+  year={2014},
+  publisher={Wereldbibliotheek}
+}
+
+@article{kaal2016politics,
+  title={Politics of place: political representation and the culture of electioneering in the Netherlands, c. 1848--1980s},
+  author={Kaal, Harm},
+  journal={European Review of History: Revue europ{\'e}enne d'histoire},
+  volume={23},
+  number={3},
+  pages={486--507},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
+
+@article{verleden2008parlementaire,
+  title={Parlementaire circulatie in de Belgische Kamer van Volksvertegenwoordigers 1831-2008},
+  author={Verleden, Frederik and Heyneman, Christophe},
+  journal={Res Publica: Tijdschrift voor Politologie},
+  volume={50},
+  number={3},
+  pages={383--408},
+  year={2008}
+}
+
+@book{best2000parliamentary,
+  title={Parliamentary representatives in Europe, 1848-2000: legislative recruitment and careers in eleven European countries},
+  author={Best, Heinrich and Cotta, Maurizio and others},
+  year={2000},
+  publisher={Oxford University Press}
+}
+
+@book{rush2001role,
+  title={The role of the member of parliament since 1868: from gentlemen to players},
+  author={Rush, Michael},
+  year={2001},
+  publisher={OUP Oxford}
+}
+
+@article{dogan1967filieres,
+  title={Les fili{\`e}res de la carri{\`e}re politique en France},
+  author={Dogan, Mattei},
+  journal={Revue fran{\c{c}}aise de sociologie},
+  pages={468--492},
+  year={1967},
+  publisher={JSTOR}
+}
+
+@book{estebe1982ministres,
+  title={Les ministres de la R{\'e}publique: 1871-1914},
+  author={Est{\`e}be, Jean},
+  year={1982},
+  publisher={Presses de la Fondation nationale des sciences politiques}
+}
+
+@book{de2003het,
+  title={Het beginsel van leven en wasdom: de constitutie van de Nederlandse politiek in de negentiende eeuw},
+  author={de Haan, Ido},
+  year={2003},
+  publisher={Wereldbibliotheek Amsterdam, the Netherlands}
+}
+
+@book{stuurman1983verzuiling,
+  title={Verzuiling, kapitalisme en patriarchaat: aspecten van de ontwikkeling van de moderne staat in Nederland},
+  author={Stuurman, Siep},
+  year={1983},
+  publisher={Sun}
+}
+
+@article{heerma2000rode,
+  title={De rode dreiging...... en het verzuilde antwoord},
+  author={Heerma van Voss, Lex},
+  journal={JCH Blom en J. Talsma red., De verzuiling voorbij. Godsdienst, stand en natie in de lange negentiende eeuw},
+  pages={115--132},
+  year={2000}
+}
+
+@book{knippenberg2000eenwording,
+  title={De eenwording van Nederland: schaalvergroting en integratie sinds 1800.-5e druk},
+  author={Knippenberg, Hans and De Pater, Ben and others},
+  year={2000},
+  publisher={NijmegenSUN}
+}
+
+@book{de1986electoraat,
+  title={Electoraat en elite: sociale structuur en sociale mobiliteit in Amsterdam, 1850-1895},
+  author={de Vries, Boukje Maria Adriana},
+  volume={13},
+  year={1986},
+  publisher={De Bataafsche Leeuw}
+}
+
+@article{duchin2012politics,
+  title={The politics of government investment},
+  author={Duchin, Ran and Sosyura, Denis},
+  journal={Journal of Financial Economics},
+  volume={106},
+  number={1},
+  pages={24--48},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{fisman2001estimating,
+  title={Estimating the value of political connections},
+  author={Fisman, Raymond},
+  journal={American economic review},
+  volume={91},
+  number={4},
+  pages={1095--1102},
+  year={2001}
+}
+
+@techreport{ferraz2009motivating,
+  title={Motivating politicians: The impacts of monetary incentives on quality and performance},
+  author={Ferraz, Claudio and Finan, Frederico},
+  year={2009},
+  institution={National Bureau of Economic Research}
+}
+
+@article{dalton1985political,
+  title={Political parties and political representation: Party supporters and party elites in nine nations},
+  author={Dalton, Russell J},
+  journal={Comparative political studies},
+  volume={18},
+  number={3},
+  pages={267--299},
+  year={1985},
+  publisher={Sage Publications}
+}
