--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/richestpols.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/richestpols.tex
@@ -45,4 +45,5 @@ H. Royaards & 1873 & 1896 & 1898 & 5,310.2 \\
 \end{tabular}
 \caption{5 Richest Politicians in each Function (1000 guilders)}
 \label{tab:richestpols}
+\footfloat{In this table, we report the richest politicians according to representative body, together with the period in which they were active, and their deflated (1900 guilders) wealth in 1000's guilders.}
 \end{table}
