--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/step7_table_wealth.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/step7_table_wealth.tex
@@ -1,5 +1,5 @@
-% latex table generated in R 3.6.0 by xtable 1.8-4 package
-% Mon Aug 31 11:47:49 2020
+% latex table generated in R 4.0.2 by xtable 1.8-4 package
+% Sun Oct  4 20:31:02 2020
 \begin{table}[ht]
 \centering
 \begin{tabular}{lrrrrrr}
@@ -8,17 +8,17 @@
 \hline
 Political Affiliation & Mean & Median & StdDev & p25 & p75 & n \\\hline
 
-confessional & 227.9 & 92.1 & 388.6 & 13.2 & 230.8 & 630 \\ 
-  liberal & 326.9 & 136.7 & 568.6 & 44.3 & 325.3 & 512 \\ 
+confessional & 264.0 & 96.1 & 441.3 & 17.8 & 326.9 & 165 \\ 
+  liberal & 328.1 & 104.2 & 629.1 & 19.5 & 302.8 & 146 \\ 
   neutral & 325.1 & 325.1 & 443.0 & 168.4 & 481.7 & 2 \\ 
-  socialist & 262.5 & 13.1 & 597.1 & 2.9 & 134.2 & 70 \\ 
+  socialist & 201.1 & 13.1 & 496.9 & 3.0 & 112.0 & 23 \\ 
    \hline\\ 
 \multicolumn{7}{l}{Panel B: Upper House}\\ 
 \hline
 Political Affiliation & Mean & Median & StdDev & p25 & p75 & n \\\hline
-confessional & 466.0 & 196.8 & 565.4 & 80.4 & 679.7 & 331 \\ 
-  liberal & 670.3 & 371.1 & 1003.2 & 119.7 & 825.4 & 374 \\ 
-  socialist & 513.1 & 1.2 & 916.8 & 1.2 & 296.0 & 14 \\ 
+confessional & 471.6 & 214.4 & 577.3 & 69.1 & 696.7 & 78 \\ 
+  liberal & 640.7 & 321.2 & 1052.3 & 99.3 & 681.6 & 82 \\ 
+  socialist & 830.3 & 296.0 & 1190.0 & 148.6 & 1244.9 & 3 \\ 
    \hline\\ 
 \multicolumn{7}{l}{Panel C: Ministers}\\ 
 \hline
@@ -37,4 +37,5 @@ Political Affiliation & Mean & Median & StdDev & p25 & p75 & n \\\hline
 \end{tabular}
 \caption{Wealth according to political affiliation ($\cdot 10^{3}$ guilders)} 
 \label{tab:wealthfunction}
+\floatfoot{This table shows various statistics (mean, median, standard deviation, 25th and 75th quantile) of net wealth at the age of death (1000 of 1900 guilders) for politicians according to representative body, and political affiliation. Note that the sample sizes does not add up to the unique amount of \textit{Memories}, since some politicians were members of more than one representative body, and hence, have been taken into account more than once.}
 \end{table}
