--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/table_wealth_kabinet.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/table_wealth_kabinet.tex
@@ -1,27 +1,28 @@
-% latex table generated in R 3.6.0 by xtable 1.8-4 package
-% Mon Aug 31 15:42:05 2020
+% latex table generated in R 4.0.2 by xtable 1.8-4 package
+% Mon Oct  5 01:54:18 2020
 \begin{table}[ht]
 \centering
-\begin{tabular}{lrrrl}
+\begin{tabular}{lllrlr}
   \hline
-Government & Mean & Median & N & WealthPM \\ 
+Government & Orientation & Period & Median & WealthPM & N \\ 
   \hline
-Thorbecke III & 178.2 & 95.6 &  7 & NA \\ 
-  De Vries/Fransen van de Putte & 81.4 & 60.7 &  7 & NA \\ 
-  Heemskerk/Van Lynden van Sandenburg & 291.1 & 220.2 &  9 & 623.5 \\ 
-  Kappeyne van de Coppello & 723.9 & 446.6 & 10 & 485.7 \\ 
-  Van Lynden van Sandenburg & 220.7 & 160.3 & 10 & 748.9 \\ 
-  Heemskerk Azn. & 152.6 & 57.7 & 13 & 623.5 \\ 
-  Mackay & 92.4 & 81.0 &  8 & 246.8 \\ 
-  Van Tienhoven & 406.8 & 233.3 &  6 & 365.7 \\ 
-  Röell & 158.1 & 55.4 &  7 & 559.6 \\ 
-  Pierson & 98.5 & 100.3 &  7 & NA \\ 
-  Kuyper & 317.2 & 53.4 &  7 & 112.4 \\ 
-  De Meester & 156.5 & 63.4 &  9 & 36.1 \\ 
-  Heemskerk & 62.6 & 21.4 & 10 & NA \\ 
-  Cort van der Linden & 109.3 & 97.6 &  8 & 100.3 \\ 
-  Ruijs de Beerenbrouck I & 80.9 & 24.5 &  7 & NA \\ 
+Thorbecke III & liberal & 1870-1872 & 95554 & NA &  7 \\ 
+  De Vries/Fransen van de Putte & liberal & 1872-1874 & 60689 & NA &  7 \\ 
+  Heemskerk/Van Lynden van Sandenburg & confessional & 1874-1877 & 220192 & 623456 &  9 \\ 
+  Kappeyne van de Coppello & liberal & 1877-1879 & 446626 & 485686 & 10 \\ 
+  Van Lynden van Sandenburg & confessional-liberal & 1879-1883 & 160340 & 748926 & 10 \\ 
+  Heemskerk Azn. & confessional-liberal & 1883-1888 & 57739 & 623456 & 13 \\ 
+  Mackay & confessional & 1888-1891 & 81022 & 246825 &  8 \\ 
+  Van Tienhoven & liberal & 1891-1894 & 233273 & 365691 &  6 \\ 
+  Röell & confessional-liberal & 1894-1897 & 55433 & 559626 &  7 \\ 
+  Pierson & liberal & 1897-1901 & 100291 & NA &  7 \\ 
+  Kuyper & confessional & 1901-1905 & 53429 & 112404 &  7 \\ 
+  De Meester & liberal & 1905-1908 & 63356 & 36111 &  9 \\ 
+  Heemskerk & confessional & 1908-1913 & 21440 & NA & 10 \\ 
+  Cort van der Linden & liberal & 1913-1918 & 97571 & 100291 &  8 \\ 
+  Ruijs de Beerenbrouck I & confessional & 1918-1922 & 24459 & NA &  7 \\ 
    \hline
 \end{tabular}
 \caption{Average Wealth of Governments (1000 guilders)} 
+\footfloat{This table shows the median wealth of governments, including, if available, the wealth of the Prime Minister (WealthPM), in deflated 1900 guilders.}
 \end{table}
