new code, and also new version paper in paper folder

--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/references.bib
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/references.bib
@@ -529,3 +529,17 @@
   year={1985},
   publisher={Sage Publications}
 }
+
+@article{berg1999ongelijkheid,
+  title={Honderd jaar ongelijkheid; inkomensverschillen sinds het eind van de negentiende eeuw},
+  author={Van den Berg, A and Hartog, Joop and others},
+  year={1999},
+  publisher={VoorburgCentraal Bureau voor de Statistiek}
+}
+
+@book{smits2000dutch,
+  title={Dutch GNP and its components, 1800-1913},
+  author={Smits, Jan Pieter Herman and Horlings, Edwin and Zanden, Jan Luiten and others},
+  year={2000},
+  publisher={Groningen Growth and Development Centre Groningen}
+}
