--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/ginicoef.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/ginicoef.tex
@@ -56,5 +56,5 @@ parliament & min & p25 & p75 & max & gini & gini2 \\\hline
 \endgroup
 \caption{Wealth Distribution over Time (1000 Guilders)} 
 \label{tab:ginicoef}
-\footfloat{This table shows inequality per parliament in both the lower house (panel A) and the upper house (panel B). There are two columns that show gini coefficient: the first column shows gini coefficients with all observations, and the second column shows gini coefficients with the two most extreme (highest and lowest) observations omitted.}
+\footfloat{This table shows inequality per parliament in both the lower house (panel A) and the upper house (panel B). There are two columns that show the Gini coefficient: the first column (\textit{gini}) shows Gini coefficients with all observations, and the second column, \textit{gini2}, shows Gini coefficients with the two most extreme (highest and lowest) observations omitted.}
 \end{table}
