--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/step7_table_wealth.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/step7_table_wealth.tex
@@ -1,41 +1,41 @@
 % latex table generated in R 4.0.2 by xtable 1.8-4 package
-% Sun Oct  4 20:31:02 2020
+% Wed Oct 28 17:48:02 2020
 \begin{table}[ht]
 \centering
 \begin{tabular}{lrrrrrr}
    
 \multicolumn{7}{l}{Panel A: Lower House}\\ 
 \hline
-Political Affiliation & Mean & Median & StdDev & p25 & p75 & n \\\hline
+Political Affiliation & N & Mean & StdDev & p25 & p50 & p75 \\\hline
 
-confessional & 264.0 & 96.1 & 441.3 & 17.8 & 326.9 & 165 \\ 
-  liberal & 328.1 & 104.2 & 629.1 & 19.5 & 302.8 & 146 \\ 
-  neutral & 325.1 & 325.1 & 443.0 & 168.4 & 481.7 & 2 \\ 
-  socialist & 201.1 & 13.1 & 496.9 & 3.0 & 112.0 & 23 \\ 
+confessional & 165 & 264.0 & 441.3 & 17.8 & 96.1 & 327 \\ 
+  liberal & 146 & 328.1 & 629.1 & 19.5 & 104.2 & 303 \\ 
+  neutral &  2 & 325.1 & 443.0 & 168.4 & 325.1 & 482 \\ 
+  socialist & 23 & 201.1 & 496.9 & 3.0 & 13.1 & 112 \\ 
    \hline\\ 
 \multicolumn{7}{l}{Panel B: Upper House}\\ 
 \hline
-Political Affiliation & Mean & Median & StdDev & p25 & p75 & n \\\hline
-confessional & 471.6 & 214.4 & 577.3 & 69.1 & 696.7 & 78 \\ 
-  liberal & 640.7 & 321.2 & 1052.3 & 99.3 & 681.6 & 82 \\ 
-  socialist & 830.3 & 296.0 & 1190.0 & 148.6 & 1244.9 & 3 \\ 
+Political Affiliation & N & Mean & StdDev & p25 & p50 & p75 \\\hline
+confessional & 78 & 471.6 & 577.3 & 69.1 & 214.4 & 697 \\ 
+  liberal & 82 & 640.7 & 1052.3 & 99.3 & 321.2 & 682 \\ 
+  socialist &  3 & 830.3 & 1190.0 & 148.6 & 296.0 & 1245 \\ 
    \hline\\ 
 \multicolumn{7}{l}{Panel C: Ministers}\\ 
 \hline
-Political Affiliation & Mean & Median & StdDev & p25 & p75 & n \\\hline
-confessional & 195.8 & 71.7 & 329.1 & 21.2 & 219.1 & 62 \\ 
-  liberal & 254.8 & 105.6 & 452.0 & 45.8 & 298.6 & 63 \\ 
-  neutral & 26.7 & 24.5 & 23.7 & 8.8 & 42.5 & 7 \\ 
-  socialist & 106.6 & 58.3 & 103.7 & 51.9 & 113.0 & 4 \\ 
+Political Affiliation & N & Mean & StdDev & p25 & p50 & p75 \\\hline
+confessional & 62 & 195.8 & 329.1 & 21.2 & 71.7 & 219 \\ 
+  liberal & 63 & 254.8 & 452.0 & 45.8 & 105.6 & 299 \\ 
+  neutral &  7 & 26.7 & 23.7 & 8.8 & 24.5 & 43 \\ 
+  socialist &  4 & 106.6 & 103.7 & 51.9 & 58.3 & 113 \\ 
    \hline\\ 
 \multicolumn{7}{l}{Panel D: Regional Executives}\\ 
 \hline
-Political Affiliation & Mean & Median & StdDev & p25 & p75 & n \\\hline
-- & 348.8 & 154.4 & 688.3 & 54.1 & 331.9 & 157 \\ 
+Political Affiliation & N & Mean & StdDev & p25 & p50 & p75 \\\hline
+- & 157 & 348.8 & 688.3 & 54.1 & 154.4 & 332 \\ 
    \hline
 \multicolumn{7}{l}{}\\
 \end{tabular}
-\caption{Wealth according to political affiliation ($\cdot 10^{3}$ guilders)} 
+\caption{Wealth according to political affiliation (1000 guilders)} 
 \label{tab:wealthfunction}
-\floatfoot{This table shows various statistics (mean, median, standard deviation, 25th and 75th quantile) of net wealth at the age of death (1000 of 1900 guilders) for politicians according to representative body, and political affiliation. Note that the sample sizes does not add up to the unique amount of \textit{Memories}, since some politicians were members of more than one representative body, and hence, have been taken into account more than once.}
+\floatfoot{This table shows various statistics (mean, standard deviation, 25th, 50th (median), and 75th quantile) of net wealth at the age of death (1000 of 1900 guilders) for politicians according to representative body, and political affiliation. These numbers give a good idea of how wealthy the bulk of representatives were across the period 1870-1920. Note that the sample sizes does not add up to the unique amount of \textit{Memories van Successie}, since some politicians were members of more than one representative body, and hence, have been taken into account more than once.}
 \end{table}
