--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/table_wealth_kabinet.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/table_wealth_kabinet.tex
@@ -1,28 +1,28 @@
 % latex table generated in R 4.0.2 by xtable 1.8-4 package
-% Mon Oct  5 01:54:18 2020
+% Thu Oct 29 18:52:55 2020
 \begin{table}[ht]
 \centering
 \begin{tabular}{lllrlr}
   \hline
 Government & Orientation & Period & Median & WealthPM & N \\ 
   \hline
-Thorbecke III & liberal & 1870-1872 & 95554 & NA &  7 \\ 
-  De Vries/Fransen van de Putte & liberal & 1872-1874 & 60689 & NA &  7 \\ 
-  Heemskerk/Van Lynden van Sandenburg & confessional & 1874-1877 & 220192 & 623456 &  9 \\ 
-  Kappeyne van de Coppello & liberal & 1877-1879 & 446626 & 485686 & 10 \\ 
-  Van Lynden van Sandenburg & confessional-liberal & 1879-1883 & 160340 & 748926 & 10 \\ 
-  Heemskerk Azn. & confessional-liberal & 1883-1888 & 57739 & 623456 & 13 \\ 
-  Mackay & confessional & 1888-1891 & 81022 & 246825 &  8 \\ 
-  Van Tienhoven & liberal & 1891-1894 & 233273 & 365691 &  6 \\ 
-  Röell & confessional-liberal & 1894-1897 & 55433 & 559626 &  7 \\ 
-  Pierson & liberal & 1897-1901 & 100291 & NA &  7 \\ 
-  Kuyper & confessional & 1901-1905 & 53429 & 112404 &  7 \\ 
-  De Meester & liberal & 1905-1908 & 63356 & 36111 &  9 \\ 
-  Heemskerk & confessional & 1908-1913 & 21440 & NA & 10 \\ 
-  Cort van der Linden & liberal & 1913-1918 & 97571 & 100291 &  8 \\ 
-  Ruijs de Beerenbrouck I & confessional & 1918-1922 & 24459 & NA &  7 \\ 
+Thorbecke III & liberal & 1870-1872 & 95.554 & NA &  7 \\ 
+  De Vries/Fransen van de Putte & liberal & 1872-1874 & 60.689 & NA &  7 \\ 
+  Heemskerk/Van Lynden van Sandenburg & confessional & 1874-1877 & 220.192 & 623.456 &  9 \\ 
+  Kappeyne van de Coppello & liberal & 1877-1879 & 446.626 & 485.686 & 10 \\ 
+  Van Lynden van Sandenburg & confessional-liberal & 1879-1883 & 160.340 & 748.926 & 10 \\ 
+  Heemskerk Azn. & confessional-liberal & 1883-1888 & 57.739 & 623.456 & 13 \\ 
+  Mackay & confessional & 1888-1891 & 81.022 & 246.825 &  8 \\ 
+  Van Tienhoven & liberal & 1891-1894 & 233.273 & 365.691 &  6 \\ 
+  Röell & confessional-liberal & 1894-1897 & 55.433 & 559.626 &  7 \\ 
+  Pierson & liberal & 1897-1901 & 100.291 & NA &  7 \\ 
+  Kuyper & confessional & 1901-1905 & 53.429 & 112.404 &  7 \\ 
+  De Meester & liberal & 1905-1908 & 63.356 & 36.111 &  9 \\ 
+  Heemskerk & confessional & 1908-1913 & 21.440 & NA & 10 \\ 
+  Cort van der Linden & liberal & 1913-1918 & 97.571 & 100.291 &  8 \\ 
+  Ruijs de Beerenbrouck I & confessional & 1918-1922 & 24.459 & NA &  7 \\ 
    \hline
 \end{tabular}
 \caption{Average Wealth of Governments (1000 guilders)} 
-\footfloat{This table shows the median wealth of governments, including, if available, the wealth of the Prime Minister (WealthPM), in deflated 1900 guilders.}
+\floatfoot{This table shows the median wealth of governments, including, if available, the wealth of the Prime Minister (WealthPM),in 1000 deflated 1900 guilders.}
 \end{table}
