--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/harnas.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/harnas.tex
@@ -1,36 +1,37 @@
 % latex table generated in R 4.0.2 by xtable 1.8-4 package
-% Mon Oct  5 03:51:14 2020
+% Wed Oct 28 21:38:34 2020
 \begin{table}[ht]
 \centering
-\begin{tabular}{lrrr}
+\begin{tabular}{lrrrr}
    
-\multicolumn{4}{l}{Panel A: Lower House}\\ 
+\multicolumn{5}{l}{Panel A: Lower House}\\ 
 \hline
-harnas & Mean & Median & SD \\\hline
+Harnas & Mean & Median & SD & AoD \\\hline
 
-$>$ 2 Year & 283545 & 95326 & 502659 \\ 
-  $<$ 2 Year & 278731 & 84325 & 491440 \\ 
+$>$ 2 Year & 282.5 & 95.3 & 503.0 & 72.9 \\ 
+  $<$ 2 Year & 278.7 & 84.3 & 491.4 & 61.1 \\ 
    \hline\\ 
-\multicolumn{4}{l}{Panel B: Upper House}\\ 
+\multicolumn{5}{l}{Panel B: Upper House}\\ 
 \hline
-harnas & Mean & Median & SD \\\hline
-$>$ 2 Year & 552511 & 291070 & 887025 \\ 
-  $<$ 2 Year & 557900 & 281424 & 774221 \\ 
+Harnas & Mean & Median & SD & AoD \\\hline
+$>$ 2 Year & 552.5 & 291.1 & 887.0 & 76.6 \\ 
+  $<$ 2 Year & 557.9 & 281.4 & 774.2 & 69.3 \\ 
    \hline\\ 
-\multicolumn{4}{l}{Panel C: Ministers}\\ 
+\multicolumn{5}{l}{Panel C: Ministers}\\ 
 \hline
-harnas & Mean & Median & SD \\\hline
-$>$ 2 Year & 296196 & 87861 & 957257 \\ 
-  $<$ 2 Year & 71026 & 29174 & 145775 \\ 
+Harnas & Mean & Median & SD & AoD \\\hline
+$>$ 2 Year & 296.2 & 87.9 & 957.3 & 74.8 \\ 
+  $<$ 2 Year & 71.0 & 29.2 & 145.8 & 61.3 \\ 
    \hline\\ 
-\multicolumn{4}{l}{Panel D: Regional Executives}\\ 
+\multicolumn{5}{l}{Panel D: Regional Executives}\\ 
 \hline
-harnas & Mean & Median & SD \\\hline
-$>$ 2 Year & 452183 & 232022 & 881262 \\ 
-  $<$ 2 Year & 234235 & 100304 & 354270 \\ 
+Harnas & Mean & Median & SD & AoD \\\hline
+$>$ 2 Year & 452.2 & 232.0 & 881.3 &  \\ 
+  $<$ 2 Year & 234.2 & 100.3 & 354.3 &  \\ 
    \hline
-\multicolumn{4}{l}{}\\
+\multicolumn{5}{l}{}\\
 \end{tabular}
 \caption{Wealth according to having died shortly after leaving office} 
 \label{tab:harnas}
+\floatfoot{This table shows the average wealth (in 1000 guilders) of politicians conditional on having died two years after leaving office (indicated by \textit{Harnas}), as well as its standard deviation, median, and the average age of death (AoD), to compare whether politicians that died recently after leaving office died on average earlier than politicians who died later after leaving office. The age of death of regional executives is not generally known.}
 \end{table}
